[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Quint Core library"
keywords = ["HPC", "tensor", "machine-learning", "quantum", "mathmatics"]
categories = ["science", "mathmatics", "quantum", "machine-learning"]
license = "MIT"

[workspace]
members = [
  "quantum"
, "util"
]

resolver = "1"

[workspace.dependencies]
derive_more = "0.99.18"
num-bigint = "0.4.0"
num-traits = "0.2.14"
once_cell = "1.19.0"
